# Simple_Neural_network

./: main.py  normalization.py  pyproject.toml  testing_loop.py
