[tool.poetry]
name = "pendulum"
version = "0.1.0"
description = ""
authors = ["Dragoleta <jorgelucasdantas@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
matplotlib = "^3.9.0"
nnfs = "^0.5.1"

[tool.poetry.group.dev.dependencies]
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
